modify for icassp 2026

--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
 <body>
     <div class="container">
         <header>
-            <h1>🎵 Takin AudioLLM</h1>
-            <p>基于大语言模型的智能语音生成系统</p>
+            <h1>CONTROLLABLE LONG-CONTEXT SPEECH GENERATION FOR AUDIOBOOK</h1>
+            <p>基于上下文理解的有声书生成系统</p>
         </header>
 
         <!-- 1. 长篇章旁白生成 -->
