update pangbai demo

--- a/index.html
+++ b/index.html
@@ -939,10 +939,11 @@
             <table class="narration-table">
                 <thead>
                     <tr>
-                        <th style="width: 30%;">测试文本</th>
-                        <th style="width: 23.33%;">🎭 CosyVoice</th>
-                        <th style="width: 23.33%;">🤖 MOSS-TTSD</th>
-                        <th style="width: 23.33%;">🎯 Takin-context (Proposed)</th>
+                        <th style="width: 25%;">测试文本</th>
+                        <th style="width: 18.75%;">Prompt</th>
+                        <th style="width: 18.75%;">🎭 CosyVoice</th>
+                        <th style="width: 18.75%;">🤖 MOSS-TTSD</th>
+                        <th style="width: 18.75%;">🎯 Takin-context (Proposed)</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -1056,6 +1057,11 @@
                             </div>
                         </td>
                         <td>
+                            <audio controls class="audio-controls prompt-audio" preload="none" id="prompt-喜千晚-audio">
+                                <source src="audios/pangbai/prompt/喜千晚.mp3" type="audio/mpeg">
+                            </audio>
+                        </td>
+                        <td>
                             <audio controls class="audio-controls" preload="none" id="cosyvoice-喜千晚-audio">
                                 <source src="audios/pangbai/cosy-outputs/cosy-喜千晚.mp3" type="audio/mpeg">
                             </audio>
@@ -1072,6 +1078,11 @@
                         </td>
                     </tr>
                     <tr>
+                        <td>
+                            <audio controls class="audio-controls prompt-audio" preload="none" id="prompt-喜千言-audio">
+                                <source src="audios/pangbai/prompt/喜千言.mp3" type="audio/mpeg">
+                            </audio>
+                        </td>
                         <td>
                             <audio controls class="audio-controls" preload="none" id="cosyvoice-喜千言-audio">
                                 <source src="audios/pangbai/cosy-outputs/cosy-喜千言.mp3" type="audio/mpeg">
@@ -1090,6 +1101,11 @@
                     </tr>
                     <tr>
                         <td>
+                            <audio controls class="audio-controls prompt-audio" preload="none" id="prompt-喜千辰-audio">
+                                <source src="audios/pangbai/prompt/喜千辰.mp3" type="audio/mpeg">
+                            </audio>
+                        </td>
+                        <td>
                             <audio controls class="audio-controls" preload="none" id="cosyvoice-喜千辰-audio">
                                 <source src="audios/pangbai/cosy-outputs/cosy-喜千辰.mp3" type="audio/mpeg">
                             </audio>
@@ -1106,6 +1122,11 @@
                         </td>
                     </tr>
                     <tr>
+                        <td>
+                            <audio controls class="audio-controls prompt-audio" preload="none" id="prompt-喜小云-audio">
+                                <source src="audios/pangbai/prompt/喜小云.mp3" type="audio/mpeg">
+                            </audio>
+                        </td>
                         <td>
                             <audio controls class="audio-controls" preload="none" id="cosyvoice-喜小云-audio">
                                 <source src="audios/pangbai/cosy-outputs/cosy-喜小云.mp3" type="audio/mpeg">
@@ -1124,6 +1145,11 @@
                     </tr>
                     <tr>
                         <td>
+                            <audio controls class="audio-controls prompt-audio" preload="none" id="prompt-喜小迪-audio">
+                                <source src="audios/pangbai/prompt/喜小迪.mp3" type="audio/mpeg">
+                            </audio>
+                        </td>
+                        <td>
                             <audio controls class="audio-controls" preload="none" id="cosyvoice-喜小迪-audio">
                                 <source src="audios/pangbai/cosy-outputs/cosy-喜小迪.mp3" type="audio/mpeg">
                             </audio>
@@ -1140,6 +1166,11 @@
                         </td>
                     </tr>
                     <tr>
+                        <td>
+                            <audio controls class="audio-controls prompt-audio" preload="none" id="prompt-喜灵霏-audio">
+                                <source src="audios/pangbai/prompt/喜灵霏.mp3" type="audio/mpeg">
+                            </audio>
+                        </td>
                         <td>
                             <audio controls class="audio-controls" preload="none" id="cosyvoice-喜灵霏-audio">
                                 <source src="audios/pangbai/cosy-outputs/cosy-喜灵霏.mp3" type="audio/mpeg">
